# SecondStagePROD

solution/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  debug-log-config.yml  docker-compose.yml  entrypoint.sh  log-config.yml  main.py  pyproject.toml  requirements.txt
solution/app/alembic/: env.py
solution/app/alembic/versions/: 5249aa97e846_добавила_недостающие_поля_к_купонам.py  5a6a9d17012c_валидация_полей_купоны.py  5abd66e0ca2e_default_factory_для_id_комментариев.py  fc66de3c136a_обновила_поля_комментариев.py
solution/app/api/: __init__.py  deps.py  main.py
solution/app/api/routes/: __init__.py  company_route.py  promocode_route.py  user_route.py
solution/app/core/: __init__.py  config.py  db.py  security.py
solution/app/models/: __init__.py  auth_models.py  comments_models.py  company_models.py  link_models.py  promocode_models.py  user_models.py
solution/app/services/: __init__.py  comment_services.py  company_services.py  promocode_services.py  user_services.py
solution/app/utils/: __init__.py  generate_access_token.py  password_validator.py  pretty_errors.py
